pushing whisper transcript

--- a/src/pyaudio-testing/pyaudio-test.ipynb
+++ b/src/pyaudio-testing/pyaudio-test.ipynb
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -444,51 +444,27 @@
      "text": [
       "Recording...\n",
       "Recording finished.\n",
-      "Volume:  4583.721304791556\n",
-      "Recording finished.\n",
-      "Volume:  686474.5636205322\n",
-      "Recording finished.\n",
-      "Volume:  920575.2929684785\n",
-      "Recording finished.\n",
-      "Volume:  3047.9228992873163\n",
-      "Recording finished.\n",
-      "Volume:  8941.859538149769\n",
-      "Recording finished.\n",
-      "Volume:  1972.8253850759322\n",
-      "Recording finished.\n",
-      "Volume:  2160.257392071602\n",
-      "Recording finished.\n",
-      "Volume:  1886.450900500726\n",
-      "Recording finished.\n",
-      "Volume:  659.5126988921442\n",
-      "Recording finished.\n",
-      "Volume:  845.1899194855556\n",
-      "Recording finished.\n",
-      "Volume:  817.3689497405685\n",
-      "Recording finished.\n",
-      "Volume:  745.1234796998415\n",
-      "Recording finished.\n",
-      "Volume:  817.834946673227\n",
-      "Recording finished.\n",
-      "Volume:  13339.05487656453\n",
-      "Recording finished.\n",
-      "Volume:  6096.097850264545\n",
-      "Recording finished.\n",
-      "Volume:  5809.699303750583\n",
-      "Recording finished.\n",
-      "Volume:  1840.7484890663363\n"
+      "Volume:  0.18303706\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Kevin Yang\\Make v2\\Hackathons\\Apocolypse\\zombie-yute\\.venv\\lib\\site-packages\\whisper\\transcribe.py:115: UserWarning: FP16 is not supported on CPU; using FP32 instead\n",
+      "  warnings.warn(\"FP16 is not supported on CPU; using FP32 instead\")\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'get'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 29\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m     28\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;28mint\u001b[39m(RATE \u001b[38;5;241m/\u001b[39m CHUNK)):\n\u001b[1;32m---> 29\u001b[0m         data \u001b[38;5;241m=\u001b[39m \u001b[43mstream\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCHUNK\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     30\u001b[0m         frames\u001b[38;5;241m.\u001b[39mappend(np\u001b[38;5;241m.\u001b[39mfrombuffer(data, dtype\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mint16))\n\u001b[0;32m     32\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRecording finished.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\Kevin Yang\\Make v2\\Hackathons\\Apocolypse\\zombie-yute\\.venv\\lib\\site-packages\\pyaudio\\__init__.py:570\u001b[0m, in \u001b[0;36mPyAudio.Stream.read\u001b[1;34m(self, num_frames, exception_on_overflow)\u001b[0m\n\u001b[0;32m    567\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_is_input:\n\u001b[0;32m    568\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mIOError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNot input stream\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    569\u001b[0m                   paCanNotReadFromAnOutputOnlyStream)\n\u001b[1;32m--> 570\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mpa\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_stream\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_stream\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_frames\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    571\u001b[0m \u001b[43m                      \u001b[49m\u001b[43mexception_on_overflow\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[29], line 49\u001b[0m\n\u001b[0;32m     46\u001b[0m \u001b[38;5;66;03m# Convert the audio data to a tensor\u001b[39;00m\n\u001b[0;32m     47\u001b[0m audio_tensor \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mfrom_numpy(whisper_audio_data)\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m---> 49\u001b[0m transcribe \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtranscribe\u001b[49m\u001b[43m(\u001b[49m\u001b[43maudio_tensor\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     50\u001b[0m \u001b[38;5;66;03m# if volume > VOLUME_THRESHOLD:\u001b[39;00m\n\u001b[0;32m     51\u001b[0m \u001b[38;5;66;03m#     print(\"Sound detected.\")\u001b[39;00m\n\u001b[0;32m     52\u001b[0m \u001b[38;5;66;03m# else:\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     66\u001b[0m \u001b[38;5;66;03m#     print(\"The \", i, \"th loudest frequency is: \", positive_freqs[positive_freqs_sorted[-i]], \"Hz\")\u001b[39;00m\n\u001b[0;32m     67\u001b[0m \u001b[38;5;66;03m# print(\"\\n\")\u001b[39;00m\n\u001b[0;32m     68\u001b[0m frames\u001b[38;5;241m=\u001b[39m[]\n",
+      "File \u001b[1;32mc:\\Users\\Kevin Yang\\Make v2\\Hackathons\\Apocolypse\\zombie-yute\\.venv\\lib\\site-packages\\whisper\\transcribe.py:135\u001b[0m, in \u001b[0;36mtranscribe\u001b[1;34m(model, audio, verbose, temperature, compression_ratio_threshold, logprob_threshold, no_speech_threshold, condition_on_previous_text, initial_prompt, word_timestamps, prepend_punctuations, append_punctuations, **decode_options)\u001b[0m\n\u001b[0;32m    133\u001b[0m mel_segment \u001b[38;5;241m=\u001b[39m pad_or_trim(mel, N_FRAMES)\u001b[38;5;241m.\u001b[39mto(model\u001b[38;5;241m.\u001b[39mdevice)\u001b[38;5;241m.\u001b[39mto(dtype)\n\u001b[0;32m    134\u001b[0m _, probs \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mdetect_language(mel_segment)\n\u001b[1;32m--> 135\u001b[0m decode_options[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlanguage\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(probs, key\u001b[38;5;241m=\u001b[39m\u001b[43mprobs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m)\n\u001b[0;32m    136\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m verbose \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    137\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\n\u001b[0;32m    138\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDetected language: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mLANGUAGES[decode_options[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlanguage\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mtitle()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    139\u001b[0m     )\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'get'"
      ]
     }
    ],
@@ -496,6 +472,9 @@
     "import pyaudio\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import whisper\n",
+    "import torch\n",
+    "\n",
     "\n",
     "# Parameters for the audio recording\n",
     "FORMAT = pyaudio.paInt16\n",
@@ -503,6 +482,8 @@
     "RATE = 44100\n",
     "CHUNK = 1024\n",
     "VOLUME_THRESHOLD = 100000\n",
+    "\n",
+    "model = whisper.load_model(\"tiny\")\n",
     "\n",
     "# Initialize PyAudio\n",
     "p = pyaudio.PyAudio()\n",
@@ -522,14 +503,21 @@
     "while True:\n",
     "    for _ in range(0, int(RATE / CHUNK)):\n",
     "        data = stream.read(CHUNK)\n",
-    "        frames.append(np.frombuffer(data, dtype=np.int16))\n",
-    "\n",
+    "        frames.append(np.frombuffer(data, dtype=np.int16).astype(np.float32) / 32768)\n",
     "    print(\"Recording finished.\")\n",
     "\n",
     "    audio_data = np.hstack(frames)\n",
     "    volume = np.linalg.norm(audio_data)\n",
     "\n",
     "    print(\"Volume: \", volume)\n",
+    "\n",
+    "     # Ensure the length of audio data is compatible with Whisper\n",
+    "    whisper_audio_data = np.pad(audio_data, (0, max(0, CHUNK - len(audio_data))), 'constant')\n",
+    "    \n",
+    "    # Convert the audio data to a tensor\n",
+    "    audio_tensor = torch.from_numpy(whisper_audio_data).unsqueeze(0)\n",
+    "    \n",
+    "    transcribe = model.transcribe(audio_tensor)\n",
     "    # if volume > VOLUME_THRESHOLD:\n",
     "    #     print(\"Sound detected.\")\n",
     "    # else:\n",
@@ -553,16 +541,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "163992.31173137354"
+       "594327.7694555421"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,15 +575,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Youtube video causes average of 163992.31173137354"
+    "Youtube video causes average of 163992.31173137354 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Listening...\n",
+      " Wash.\n",
+      " Thank you.\n",
+      " you\n",
+      " Thank you.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pyaudio\n",
+    "import numpy as np\n",
+    "import whisper\n",
+    "import torch\n",
+    "import time\n",
+    "\n",
+    "# Load the Whisper model\n",
+    "model = whisper.load_model(\"base\")\n",
+    "\n",
+    "# Parameters for the audio recording\n",
+    "FORMAT = pyaudio.paInt16  # Format of sampling (16-bit PCM)\n",
+    "CHANNELS = 1              # Number of channels (mono)\n",
+    "RATE = 16000              # Sampling rate (16 kHz for Whisper compatibility)\n",
+    "CHUNK = 1024              # Number of frames per buffer\n",
+    "CHUNKS_PER_SECOND = RATE // CHUNK\n",
+    "BUFFER_SIZE_SECONDS = 10\n",
+    "BUFFER_SIZE = CHUNKS_PER_SECOND * BUFFER_SIZE_SECONDS\n",
+    "\n",
+    "# Initialize PyAudio\n",
+    "p = pyaudio.PyAudio()\n",
+    "\n",
+    "# Open a stream with the above parameters\n",
+    "stream = p.open(format=FORMAT,\n",
+    "                channels=CHANNELS,\n",
+    "                rate=RATE,\n",
+    "                input=True,\n",
+    "                frames_per_buffer=CHUNK)\n",
+    "\n",
+    "print(\"Listening...\")\n",
+    "\n",
+    "# Initialize a buffer to hold audio data\n",
+    "audio_buffer = np.zeros(BUFFER_SIZE * CHUNK, dtype=np.float32)\n",
+    "\n",
+    "try:\n",
+    "    while True:\n",
+    "        # Read audio data from the stream\n",
+    "        for i in range(BUFFER_SIZE):\n",
+    "            data = stream.read(CHUNK)\n",
+    "            audio_chunk = np.frombuffer(data, dtype=np.int16).astype(np.float32) / 32768.0\n",
+    "            audio_buffer[i * CHUNK:(i + 1) * CHUNK] = audio_chunk\n",
+    "\n",
+    "        # Convert the audio buffer to the format expected by Whisper\n",
+    "        audio_buffer = audio_buffer.astype(np.float32)\n",
+    "\n",
+    "        # Transcribe the audio data\n",
+    "        result = model.transcribe(audio_buffer, fp16=False)\n",
+    "\n",
+    "        # Print the transcribed text\n",
+    "        print(result['text'])\n",
+    "\n",
+    "        # Sleep for a while to simulate real-time processing (optional)\n",
+    "        # time.sleep(BUFFER_SIZE_SECONDS)\n",
+    "\n",
+    "except KeyboardInterrupt:\n",
+    "    print(\"Stopping...\")\n",
+    "\n",
+    "# Stop and close the stream\n",
+    "stream.stop_stream()\n",
+    "stream.close()\n",
+    "p.terminate()\n"
+   ]
   }
  ],
  "metadata": {
