--- a/src/pyaudio-testing/pyaudio-test.ipynb
+++ b/src/pyaudio-testing/pyaudio-test.ipynb
@@ -580,18 +580,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Listening...\n",
-      " Wash.\n",
-      " Thank you.\n",
-      " you\n",
-      " Thank you.\n"
+      " We're not fam plug whip in slime boom\n",
+      " to sanitize it because to get it closer to\n",
+      " I love it. And AI is seemingly the easiest way to do that.\n",
+      " What? Okay, this is the end of the video. Maybe I should just turn it off. Okay.\n",
+      " Okay, now we are actually, let me see your prompt. I ran into this when I was doing glados thing, but sometimes I get from\n",
+      " Lolda- B差不多 x Where's your prompt?\n",
+      " I don't know. I didn't do anything. You're red and pretty anything. I just called\n",
+      " I think it's the whole story. I think it's the thought choices. I think I have it. You never gave it.\n",
+      " If you suspect, like, you know, oh yeah.\n"
      ]
     }
    ],
@@ -601,6 +608,15 @@
     "import whisper\n",
     "import torch\n",
     "import time\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# Load the Whisper model\n",
     "model = whisper.load_model(\"base\")\n",
@@ -645,6 +661,39 @@
     "\n",
     "        # Print the transcribed text\n",
     "        print(result['text'])\n",
+    "        from openai import OpenAI\n",
+    "        load_dotenv()\n",
+    "        client = OpenAI(api_key=\"56SIJW3HWYD8YZNJYRMKB7N1372RX70WPVQ7O11U18HZCJEW1VL4RORMYTTPY5YD\",base_url=\"https://jamsapi.hackclub.dev/openai/\")\n",
+    "        response = client.chat.completions.create(\n",
+    "        model=\"gpt-4o\",\n",
+    "        messages=[\n",
+    "            {\n",
+    "            \"role\": \"system\",\n",
+    "            \"content\": [\n",
+    "                {\n",
+    "                \"type\": \"text\",\n",
+    "                \"text\": \"I will provide you a dictionary. They are specifically words of a venacular from Toronto. You will NOT take into consideration, the meaning. You will try to take my input sentence and format it  based on sound, to the words in my dictionary. For example, You Don't Know, becomes You Dun Know. Dictionary: Whazzgood Hol’up Yo Nah-fam Straight-up Real talk Wagwan We out here Slime Fam Big Man Mandem Bredrin Plug Ting Galdem Ends Whip Cheese Drip Water Brains We Dawg Homie Is runnin link holla Whippin chirpin’ flexin’ Catch-a-vibe Settle Run Skrrt Swerve Run up Chop Mash up Could gyat Whip 6ix Cheese Slime Yute Ting Drip Food Watah Raps Gwop Block Piff G Ends Deadass No cap Facts Bless up Boom Safe Trust On god Say less You dun know Clapped On job]\"\n",
+    "                }\n",
+    "            ]\n",
+    "            },\n",
+    "            {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": [\n",
+    "                {\n",
+    "                \"type\": \"text\",\n",
+    "                \"text\": result['text']\n",
+    "                }\n",
+    "            ]\n",
+    "            }\n",
+    "        ],\n",
+    "        temperature=1,\n",
+    "        max_tokens=256,\n",
+    "        top_p=1,\n",
+    "        frequency_penalty=0,\n",
+    "        presence_penalty=0\n",
+    "        )\n",
+    "        print(response.choices[0].message.content)\n",
+    "\n",
     "\n",
     "        # Sleep for a while to simulate real-time processing (optional)\n",
     "        # time.sleep(BUFFER_SIZE_SECONDS)\n",
@@ -657,6 +706,13 @@
     "stream.close()\n",
     "p.terminate()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -675,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
