Add data files audio sound clips all

--- a/src/pyaudio-testing/pyaudio-test.ipynb
+++ b/src/pyaudio-testing/pyaudio-test.ipynb
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
     "metadata": {}
    },
@@ -590,15 +590,11 @@
      "output_type": "stream",
      "text": [
       "Listening...\n",
-      " We're not fam plug whip in slime boom\n",
-      " to sanitize it because to get it closer to\n",
-      " I love it. And AI is seemingly the easiest way to do that.\n",
-      " What? Okay, this is the end of the video. Maybe I should just turn it off. Okay.\n",
-      " Okay, now we are actually, let me see your prompt. I ran into this when I was doing glados thing, but sometimes I get from\n",
-      " Lolda- B差不多 x Where's your prompt?\n",
-      " I don't know. I didn't do anything. You're red and pretty anything. I just called\n",
-      " I think it's the whole story. I think it's the thought choices. I think I have it. You never gave it.\n",
-      " If you suspect, like, you know, oh yeah.\n"
+      " It's really tight. It doesn't do anything. You just talk right now. Alright, so, alright. Alright, yeah. Man, I loved the Shopify headquarter.\n",
+      "It’s real tight. It don’t do nothin’. You just talk right now. Aight, so, aight. Aight, yeah. Big man, I loved the Shopify headquarter. Said AI\n",
+      " Yeah, it's real tight. It don't do nothing\n",
+      "Yeah, it's straight-up tight. It nah do nothing. Said AI\n",
+      "Stopping...\n"
      ]
     }
    ],
@@ -692,7 +688,8 @@
     "        frequency_penalty=0,\n",
     "        presence_penalty=0\n",
     "        )\n",
-    "        print(response.choices[0].message.content)\n",
+    "        # Torontoed Text!\n",
+    "        print(response.choices[0].message.content, \"Said AI\")\n",
     "\n",
     "\n",
     "        # Sleep for a while to simulate real-time processing (optional)\n",
