--- a/src/pyaudio-testing/whisper_testing.ipynb
+++ b/src/pyaudio-testing/whisper_testing.ipynb
@@ -35,8 +35,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "py39",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
